{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 30,
  "lineage": "0bb68ccc-e48d-3682-d685-851ee7d7c0b8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ec2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:117878746255:vpc/vpc-190dc57d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-ae24c3c7",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8d8e83e8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-190dc57d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e4e56c80",
            "owner_id": "117878746255",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04b02c0ab057c594f",
            "owner_id": "117878746255",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0c7d366bdb7808e9a"
              }
            ],
            "tags": {
              "Name": "tf-api-gateway-lambda-with-vpc-rtb"
            },
            "vpc_id": "vpc-07a5d0d49bf73be72"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_peering_connection.this_to_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049db3888c5acf58e",
            "route_table_id": "rtb-04b02c0ab057c594f",
            "subnet_id": "subnet-0c6d600ca6923d040"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.this",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:117878746255:security-group/sg-0fb529ca52f80f839",
            "description": "tf-api-gateway-lambda-with-vpc-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb529ca52f80f839",
            "ingress": [],
            "name": "tf-api-gateway-lambda-with-vpc-sg",
            "name_prefix": "",
            "owner_id": "117878746255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-api-gateway-lambda-with-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a5d0d49bf73be72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:117878746255:subnet/subnet-0c6d600ca6923d040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.129.0/24",
            "id": "subnet-0c6d600ca6923d040",
            "map_public_ip_on_launch": false,
            "owner_id": "117878746255",
            "tags": {
              "Name": "tf-api-gateway-lambda-with-vpc-subnet"
            },
            "vpc_id": "vpc-07a5d0d49bf73be72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:117878746255:vpc/vpc-07a5d0d49bf73be72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.128.0/20",
            "default_network_acl_id": "acl-04558b3b8275fba35",
            "default_route_table_id": "rtb-0189430af3233595d",
            "default_security_group_id": "sg-0200bc162af52caf8",
            "dhcp_options_id": "dopt-8d8e83e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07a5d0d49bf73be72",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0189430af3233595d",
            "owner_id": "117878746255",
            "tags": {
              "Name": "tf-api-gateway-lambda-with-vpc-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0c7d366bdb7808e9a",
            "peer_owner_id": "117878746255",
            "peer_region": "ap-northeast-1",
            "peer_vpc_id": "vpc-07a5d0d49bf73be72",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "tf-api-gateway-lambda-with-vpc-vpc-peering"
            },
            "vpc_id": "vpc-190dc57d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_vpc.ec2_vpc"
          ]
        }
      ]
    }
  ]
}